namespace Applied;
public interface IMenu
{
    List<MenuItem> MenuItems { get; }
}